--- a/transformations/Dockerfile.patch
+++ b/transformations/Dockerfile.patch
@@ -1,30 +1,23 @@
---- isle-fedora/Dockerfile	2020-11-05 11:30:55.000000000 -0500
-+++ isle-fedora-alt/Dockerfile	2020-11-19 12:34:46.000000000 -0500
+--- isle-fedora/Dockerfile	2021-04-07 14:01:09.000000000 -0400
++++ Dockerfile	2021-04-07 14:09:11.000000000 -0400
 @@ -1,4 +1,4 @@
--FROM islandoracollabgroup/isle-tomcat:1.5.2
-+FROM 840783682283.dkr.ecr.us-east-1.amazonaws.com/islandoracollabgroup/isle-tomcat:1.5.2
+-FROM islandoracollabgroup/isle-tomcat:1.5.5
++FROM 840783682283.dkr.ecr.us-east-1.amazonaws.com/islandoracollabgroup/tomcat:1.5.5
  
  ## Dependencies
  RUN GEN_DEP_PACKS="mysql-client \
-@@ -25,15 +25,20 @@
-     ANT_HOME=/opt/ant \
-     MAVEN_MAJOR=${MAVEN_MAJOR:-3} \
-     MAVEN_VERSION=${MAVEN_VERSION:-3.6.3} \
--    ANT_VERSION=${ANT_VERSION:-1.10.8}
-+    ANT_VERSION=${ANT_VERSION:-1.10.9}
- 
- 
+@@ -30,10 +30,14 @@
  ## Copy installation configuration files.
  COPY install_properties/ /
  
-+## DB_ENDPOINT ENV
 +ARG DB_ENDPOINT
 +
  ## Fedora Installation with Drupalfilter
  # @see: Fedora https://github.com/fcrepo3/fcrepo/releases & Drupal-filter https://github.com/Islandora/islandora_drupal_filter/releases
  RUN mkdir -p $FEDORA_HOME /tmp/fedora &&\
+     cd /tmp/fedora && \
 +    sed -i -e '10s@\(//\)mysql\(\\:\)@\1\${DB_ENDPOINT}\2@' \
 +        -e '28s@\(//\)mysql\(\\:\)@\1\${DB_ENDPOINT}\2@' /usr/local/install.properties && \
-     cd /tmp/fedora && \
      curl -O -L "https://github.com/fcrepo3/fcrepo/releases/download/v3.8.1/fcrepo-installer-3.8.1.jar" && \
      java -jar fcrepo-installer-3.8.1.jar /usr/local/install.properties && \
+     $CATALINA_HOME/bin/startup.sh && \
