--- a/transformations/Dockerfile.patch
+++ b/transformations/Dockerfile.patch
@@ -1,8 +1,8 @@
---- isle-fedora/Dockerfile	2021-08-11 08:44:36.000000000 -0400
-+++ Dockerfile	2021-08-11 08:48:30.000000000 -0400
+--- Dockerfile	2024-04-04 12:23:21.860423163 -0400
++++ /tmp/Dockerfile	2024-04-04 11:09:16.498558947 -0400
 @@ -1,4 +1,4 @@
--FROM islandoracollabgroup/isle-tomcat:1.5.9
-+FROM 840783682283.dkr.ecr.us-east-1.amazonaws.com/islandoracollabgroup/isle-tomcat:1.5.9 
+-FROM islandoracollabgroup/isle-tomcat:1.5.28
++FROM 840783682283.dkr.ecr.us-east-1.amazonaws.com/islandoracollabgroup/isle-tomcat:1.5.28
  
  ## Dependencies
  RUN GEN_DEP_PACKS="mysql-client \
